# libspanner

./: .gitmodules  BoundedDegreePlaneSpanners.h  CMakeLists.txt  GreedySpanners.h  README.md  Utilities.h  constants.h  geometry.h  types.h  utilities.h
bdps/: BCC2012.h  BGHP2010.h  BGS2005.h  BHS2018.h  BKPX2015.h  BSX2009.h  Degree3.h  KPT2017.h  KPX2010.h  KX2012.h  LW2004.h  types.h
delaunay/: DelaunayL2.h  DelaunayLinf.h  DelaunayTD.h
greedy/: DN97.h  GreedySpanner.h  types.h
measure/: degree.h  stretchfactor.h  timer.h  weight.h
points/: PointGenerators.h  cleaner.h  generators.h  measure.h  mst.h  ordering.h  utilities.h
shortest_paths/: Dijkstra.h  FloydWarshall.h  astar.h
